--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/*@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -110,7 +110,7 @@ table{
 button{
   /* text-align: center; */
   /* vertical-align: middle; */
-  padding: 3px 6px 3px 6px;
+ /* padding: 3px 6px 3px 6px;
   border: none;
 }
 div.dashboard ul li{
@@ -128,3 +128,4 @@ select{
 select:invalid{
   color: #818181;
 }
+*/
